# Endgame

./: .env.example  .gitignore  .gitmodules  README.md  docker-compose.yml  test.txt
.github/workflows/: axum_embed_checker.yml
axum-embed/: Cargo.toml  Dockerfile
axum-embed/src/: main.rs
docs/: CI_NOTES.md  architecture.md  functions-and-tools.md  podman.md
functions/: README.md
models/: README.md
sync/: Dockerfile  sync_functions.py
tools/: README.md
tools/openwebui_function_author/: main.py
